Fixed some find bugs warnings